--- a/traning/Views/Test/kage.cshtml
+++ b/traning/Views/Test/kage.cshtml
@@ -1,16 +1,8 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "some fancy title";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
         <h1>@ViewBag.Title</h1>
 
         <h5>Description:</h5>
@@ -26,5 +18,4 @@
 
             </ul>
         </div>
-</body>
-</html>
+
